--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blackRed">#170000</color>
+    <color name="gray1">#1C1C1C</color>
+    <color name="gray2">#AFAFAF</color>
+    <color name="whiteBlue">#B8C8FF</color>
 </resources>
