update theme colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray1">#1C1C1C</color>
     <color name="gray2">#AFAFAF</color>
     <color name="whiteBlue">#B8C8FF</color>
+    <color name="tableRow">#FFECECEC</color>
 </resources>
