--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
                 android:padding="10dip"
                 android:gravity="center"
                 android:ems="5"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="UID" />
@@ -84,6 +85,7 @@
                 android:padding="10dip"
                 android:textStyle="bold"
                 android:ems="8"
+                android:textColor="@color/black"
                 android:gravity="center"
                 android:text="Technologies" />
 
@@ -91,6 +93,7 @@
                 android:layout_column="2"
                 android:gravity="center"
                 android:padding="10dip"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:ems="8"
                 android:text="Apdu response" />
@@ -114,6 +117,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:stretchColumns="1"
+            android:textColor="@color/black"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
